Fix spacing around some elements

--- a/style.pcss
+++ b/style.pcss
@@ -232,7 +232,7 @@ iframe {
 			@apply md:border-gray-200;
 			@apply md:border-l;
 			@apply md:sticky;
-			@apply md:top-0;
+			@apply md:top-2.5;
 
 			.ftek-plugin-group-page-logo {
 				@apply hidden;
